# sda3

./: CMakeLists.txt  Dictionar.cpp  Dictionar.h  IteratorDictionar.cpp  IteratorDictionar.h  main.cpp
